# db-backup

./: .gitignore  Dockerfile.arm64  README.md  __init__.py  __main__.py  build-all.sh  build.sh  db-backup.spec  entry_point.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  publish.yml
db-backup/data/: connection_manager.py
db-backup/interface/: cli.py
db_backup.egg-info/: PKG-INFO  SOURCES.txt
