
[project]
name = "db-backup"
version = "0.1.2"
description = "A CLI tool for backing up databases to cloud storage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.19",
    "click>=8.2.1",
    "mysql-connector-python>=9.4.0",
    "python-dotenv>=1.1.1",
]


[project.scripts]
db-backup = "db_backup.main:backup_cli"
database-backup = "db_backup.main:backup_cli"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "db_backup",
    "db_backup.app",
    "db_backup.data",
    "db_backup.domain",
    "db_backup.interface",
]
package-dir = {"db_backup" = "db-backup"}
